<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kornel_ius.dotcrossvector.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/vector_a"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/firstX"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/firstY"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/z"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/firstZ"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/vector_b"
                android:textColor="@color/black"
                android:textSize="28sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/x"
                    android:textColor="@color/black"

                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/secondX"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/y"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/secondY"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/z"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/secondZ"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="numberDecimal"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textSize="24sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="calculate"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/crossProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/dotProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textSize="28sp" />
</LinearLayout>
